larger z-index for fixed headerbar

--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -97,7 +97,7 @@ pre, code{
     position:fixed;
     width:100%;
     background-color:white;
-    z-index:1;
+    z-index:100;
     box-shadow:0 1px 6px 0 rgba(32,33,36,0.28);  /* same as google.com */
 }
 main{
